@startuml
title "Strategy Pattern"
'Strategy pattern define a family of algorithms, encapsulated each one and make them interchangeable. Strategy lets the algorithm vary independently from clients that use it'

interface TravelStrategy {
    travel(source: String, destination: String)
}

TravelStrategy <|-- CarTravelStrategy
TravelStrategy <|-- CycleTravelStrategy
TravelStrategy <|-- WalkTravelStrategy


class CarTravelStrategy {
    + travel(source: String, destination: String)
}

class CycleTravelStrategy {
    + travel(source: String, destination: String)
}

class WalkTravelStrategy {
    + travel(source: String, destination: String)
}

class TravelPlanner {
    travelStrategy: TravelStrategy
    + planTravel(source: String, destination: String)
}

TravelPlanner -right-> TravelStrategy
@enduml